Opening internal objects for using app